Comments to salt_func

--- a/logstash_conf/logstash.conf
+++ b/logstash_conf/logstash.conf
@@ -4,6 +4,14 @@ input {
   }
 }
 
+filter {
+    grok {
+      match => {  
+        patterns_dir => "/opt/logstash/custom_patterns"
+        "message" => "%{291009}"
+      }
+    }
+}
 output { 
   stdout { 
     codec => rubydebug 
